# POV_Demo_Device

./: .gitignore  README.md  button_press_log.csv  central.py
doc/: librealsenseビルド手順.md  python仮想環境の作り方.md  python仮想環境の操作.md  ビルド手順.md  実行手順.md
work/: pov_demo_device.repos
work/src/pov_bluetooth_central/: CMakeLists.txt  package.xml  setup.cfg  setup.py
work/src/pov_bluetooth_central/pov_bluetooth_central/: bluetooth_central_node.py
work/src/pov_bluetooth_central/scripts/: bluetooth_central_node
work/src/pov_demo_msg/: CMakeLists.txt  package.xml
work/src/pov_demo_msg/msg/: PovResult.msg
work/src/pov_hailo8_node/: CMakeLists.txt  package.xml  yolov8cls_rio_classification.hef
work/src/pov_hailo8_node/include/pov_hailo8_node/: pov_labels.hpp
work/src/pov_hailo8_node/src/: pov_hailo8_node.cpp
work/src/pov_main/: CMakeLists.txt  package.xml
work/src/pov_main/launch/: pov_demo.launch.py
work/src/pov_main/src/: pov_main_node.cpp  pov_main_test.cpp
work/src/pov_main_test/: CMakeLists.txt  package.xml
